--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               at <a class="fbLinkHeader" href="https://ux.shopify.com/" target="_blank">Shopify</a>
               <br>
               <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> YSDN
-              3rd year, user advocate, front-end coder
+              4th year, user advocate
               <br>
               <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Former <a
                 class="fbLinkHeader" href="https://design.facebook.com/" target="_blank">Facebook</a> Product
@@ -296,7 +296,7 @@
         </h2>
         <h3 class="projectDescription">Interested in one of my projects? Or want
           to crack bad jokes together? (I have plenty)</h3>
-        <p class="madeWithLove smallText copyrightMargin">Designed + coded with <img class="emojiSmall"
+        <p class="madeWithLove smallText copyrightMargin">Designed with <img class="emojiSmall"
             src="./img/sparklingHeartEmoji.png" loading="lazy" alt="Sparkling Heart"> by
           Jasper Tu</p>
       </div>
