--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
       </header>
 
       <div class="bodyWrapper">
-        <h2 class="projectTitle marginParaSpace--bottom reveal">Hi, I’m Jasper! Lifelong learner & early riser.</h2>
+        <h2 class="projectTitle marginParaSpace--bottom reveal">Hi, I’m Jasper! Lifelong learner & tech enthusiast.</h2>
 
         <p class="bodyType marginParaSpace--bottom reveal">
           Previously, I was a Product Design Intern on Facebook's Branded Content team during Summer 2020.
@@ -175,7 +175,7 @@
         </h2>
         <h3 class="projectDescription">Interested in one of my projects? Or want
           to crack bad jokes together? (I have plenty)</h3>
-        <p class="madeWithLove smallText copyrightMargin">Designed + coded with <img class="emojiSmall"
+        <p class="madeWithLove smallText copyrightMargin">Designed with <img class="emojiSmall"
             src="./img/sparklingHeartEmoji.png" loading="lazy" alt="Sparkling Heart"> by
           Jasper Tu</p>
       </div>
