--- a/playdium.html
+++ b/playdium.html
@@ -180,7 +180,7 @@
         </h2>
         <h3 class="projectDescription">Interested in one of my projects? Or want
           to crack bad jokes together? (I have plenty)</h3>
-        <p class="madeWithLove smallText copyrightMargin">Designed + coded with <img class="emojiSmall"
+        <p class="madeWithLove smallText copyrightMargin">Designed with <img class="emojiSmall"
             src="./img/sparklingHeartEmoji.png" loading="lazy" alt="Sparkling Heart"> by
           Jasper Tu</p>
       </div>
