--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
               <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Product Design Intern
               at <a class="fbLinkHeader" href="https://ux.shopify.com/" target="_blank">Shopify</a>
               <br>
-              <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> YSDN
-              4th year, user advocate
+              <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Senior at <a
+                class="fbLinkHeader" href="https://design.ampd.yorku.ca/" target="_blank">York
+                University / Sheridan College Program in Design</a>
               <br>
               <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Former <a
                 class="fbLinkHeader" href="https://design.facebook.com/" target="_blank">Facebook</a> Product
@@ -302,7 +303,7 @@
       </div>
 
       <div class="footerRight">
-        <a href="mailto:jasper_tu@outlook.com?subject=Design%20Inquiry" class="button">Get in touch</a>
+        <a href="mailto:tu.jasp@gmail.com?subject=Design%20Inquiry" class="button">Get in touch</a>
         <p class="smallText elsewhereMargin">Elsewhere</p>
         <div class="socialFooter">
           <!--<a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" target="_blank">
