--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <br>
               <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Senior at <a
                 class="fbLinkHeader" href="https://design.ampd.yorku.ca/" target="_blank">York
-                University / Sheridan College Program in Design</a>
+                University / Sheridan College Design</a>
               <br>
               <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Former <a
                 class="fbLinkHeader" href="https://design.facebook.com/" target="_blank">Facebook</a> Product
