--- a/index.html
+++ b/index.html
@@ -87,21 +87,18 @@
             <h1 class="jasperTitle">
               <span class="jasperTitleBold">Jasper Tu</span> is a data-informed product designer passionate about
               pioneering
-              innovative opportunities for all.
+              innovative opportunities.
               <!--<img class="emojiLarge" src="./img/peaceSignEmoji.png" loading="lazy" alt="Peace Sign">-->
             </h1>
             <h2 class="jasperFacts moreDetail">
-              <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Product Design Intern
-              at <a class="fbLinkHeader" href="https://ux.shopify.com/" target="_blank">Shopify</a>
+              <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Recently at
+              <a class="fbLinkHeader" href="https://ux.shopify.com/" target="_blank">Shopify</a> and <a
+                class="fbLinkHeader" href="https://design.facebook.com/" target="_blank">Facebook</a>
               <br>
               <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Senior at <a
                 class="fbLinkHeader" href="https://design.ampd.yorku.ca/" target="_blank">York
-                University / Sheridan College Design</a>
+                U / Sheridan College Design</a>
               <br>
-              <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Former <a
-                class="fbLinkHeader" href="https://design.facebook.com/" target="_blank">Facebook</a> Product
-              Design
-              Intern<br>
               <!--<img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Seeking 2021 product
             design internships<br>-->
             </h2>
@@ -140,7 +137,7 @@
     </div>
   </div>
 
-  <div class="offWhiteBG">
+  <div class="whiteBG">
     <div class="gridCenterer">
       <div class="container">
         <!-- Projects -->
