--- a/fbintern.html
+++ b/fbintern.html
@@ -103,12 +103,13 @@
             <div class="caseStudyDetailsLeft">
               <h2 class="h2-caseStudy-DM">What Did I Work On?</h2>
               <p class="bodyType-DM">
-                Over the course of summer 2020, I designed a zero-to-one feature for Facebook’s Branded Content
-                products. At a high level, this project involved me scoping out a feasible solution for the summer, that
+                In summer 2020, I designed a 0-to-1 feature for Facebook’s Branded Content
+                products. This project involved me scoping out a feasible solution for the summer, that
                 was still capable of bringing value to the team roadmap in the future. Also apart of this experience was
                 heavy, cross-functional collaboration which situated me to seek alignment from teammates and partners in
                 the larger org, pursue breadth and depth in design explorations, and capitalize on the opportunity to
-                prototype and test my feature with real Facebook users. Reach out to me if you want to learn more about
+                prototype and test my feature with real Facebook users. Due to NDA, reach out to me if you want to learn
+                more about
                 my project!
               </p>
               <h3 class="h3-caseStudy-DM marginM--top">Objective</h3>
