--- a/kumoApp2.html
+++ b/kumoApp2.html
@@ -508,10 +508,9 @@
                 simplified
                 to 4 core
                 features:<br>
-                • <span class="bodyTypeBold">Home</span> (housing data reports of various types)<br>
-                • <span class="bodyTypeBold">Device management</span> (add, edit, delete, masks)<br>
+                • <span class="bodyTypeBold">Home</span> (housing various data types)<br>
+                • <span class="bodyTypeBold">Device management</span> (add, rename, delete masks)<br>
                 • <span class="bodyTypeBold">Notifications</span><br>
-                • <span class="bodyTypeBold">Settings</span><br>
               </p>
           </div>
           <img class="caseStudyImg" src="img/kumoApp/Kumo_Info Arch_Updated v3.png" loading="lazy"
@@ -569,11 +568,11 @@
               <p class="bodyType marginS--top">
                 <span class="bodyTypeBold">Action:</span> I added <span class="bodyTypeBold-Green">mask naming</span> to
                 the Onboarding flow. I also added an Edit
-                Masks button to the Devices screen—3 versions were made and A/B tested. <span
+                Masks button to the Devices screen—2 layouts were made and A/B tested. <span
                   class="bodyTypeBold-Green">Option
-                  A</span> was chosen because
-                the Edit Masks button would never conflict with the Add Mask button if there were more masks extending
-                past the scroll.
+                  B</span> was chosen because
+                users thought extending the health bars end to end across the full screen width made for an easier
+                viewing experience.
               </p>
             </div>
             <div>
