--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
           <div class="headerRight">
             <h1 class="jasperTitle">
               <span class="jasperTitleBold">Jasper Tu</span> is a data-informed product designer passionate about
-              pioneering
-              innovative opportunities.
+              innovation and consumer platforms.
               <!--<img class="emojiLarge" src="./img/peaceSignEmoji.png" loading="lazy" alt="Peace Sign">-->
             </h1>
             <h2 class="jasperFacts moreDetail">
