--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 
             <div class="downButtonContainer">
               <a class="downButton hvr-forward" address="true">
-                Selected Works
-                <img class="emoji" src="./img/redTriangleDownEmoji.png" loading="lazy" alt="Down Button">
+                Portfolio being updated!
+                <!-- <img class="emoji" src="./img/redTriangleDownEmoji.png" loading="lazy" alt="Down Button"> -->
               </a>
             </div>
           </div>
@@ -159,120 +159,6 @@
                 <div class="projectType-Group">
                   <span class="projectType">Product Design</span>
                   <span class="projectType">Internship</span>
-                  <span class="projectType">Web</span>
-                </div>
-              </div>
-            </a>
-          </article>
-
-          <!-- Kumo Companion App -->
-          <article>
-            <a class="projectSingle" href="kumoApp2.html">
-              <img class="projectCover" src="./img/home-cover-Kumo-App.jpg" loading="lazy" alt="Kumo Companion App">
-              <div class="sec">
-                <h2 class="projectTitle">Kumo Companion App <span class="projectArrow">→</span></h2>
-                <p class="projectDescription">Track Kumo usage and stay aware of your surroundings</p>
-                <!-- <p class="awardText">
-                <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
-                Adobe Jam 1st Place
-              </p> -->
-                <div class="projectType-Group">
-                  <span class="projectType">UI/UX</span>
-                  <span class="projectType">Research</span>
-                  <span class="projectType">Prototyping</span>
-                  <span class="projectType">Testing</span>
-                </div>
-              </div>
-            </a>
-          </article>
-
-          <!-- Kumo Smart Mask -->
-          <article>
-            <a class="projectSingle" href="https://www.notion.so/Kumo-Smart-Mask-a6ab4a3a38184989886887746a99f04e"
-              target="_blank">
-              <img class="projectCover" src="./img/home-cover-Kumo-Mask.jpg" loading="lazy" alt="Kumo Smart Mask">
-              <div class="sec">
-                <h2 class="projectTitle">Kumo Smart Mask <span class="projectArrow">→</span></h2>
-                <p class="projectDescription">Reimagining a more inclusive mask experience</p>
-                <!-- <p class="awardText">
-                <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
-                Adobe Jam 1st Place
-              </p> -->
-                <div class="projectType-Group">
-                  <span class="projectType">Product Design</span>
-                  <span class="projectType">Industrial Design</span>
-                </div>
-              </div>
-            </a>
-          </article>
-
-          <!-- Historia -->
-          <article>
-            <a class="projectSingle" href="https://www.behance.net/gallery/93816461/Historia" target="_blank">
-              <img class="projectCover" src="./img/home-cover-Historia.jpg" loading="lazy" alt="Historia">
-              <div class="sec">
-                <h2 class="projectTitle">Historia <span class="projectArrow">→</span></h2>
-                <p class="projectDescription">Empowering high school students to efficiently conduct history research
-                </p>
-                <!-- <p class="awardText">
-                <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
-                Adobe Jam 1st Place
-              </p> -->
-                <div class="projectType-Group">
-                  <span class="projectType">Hackathon Winner
-                    <!--<span class="moreDetail">Design</span>-->
-                  </span>
-                  <span class="projectType">UI/UX</span>
-                  <span class="projectType">Mobile</span>
-                </div>
-              </div>
-            </a>
-          </article>
-
-          <!--Playdium-->
-          <article>
-            <a class="projectSingle" href="playdium.html">
-              <img class="projectCover" src="./img/home-cover-Playdium.jpg" loading="lazy" alt="Historia">
-              <div class="sec">
-                <h2 class="projectTitle">Playdium <span class="projectArrow">→</span></h2>
-                <p class="projectDescription">Connecting kids with an educational
-                  game while physically distanced</p>
-                <div class="projectType-Group">
-                  <span class="projectType">Hackathon Finalist</span>
-                  <span class="projectType">UI/UX</span>
-                  <span class="projectType">Tablet</span>
-                </div>
-              </div>
-            </a>
-          </article>
-
-          <!--Spark-->
-          <article>
-            <a class="projectSingle" href="spark.html">
-              <img class="projectCover" src="./img/home-cover-Spark.jpg" loading="lazy" alt="Historia">
-              <div class="sec">
-                <h2 class="projectTitle">Spark <span class="projectArrow">→</span></h2>
-                <p class="projectDescription">A conference connecting creative pros to mentors, opportunities, and
-                  resources</p>
-                <div class="projectType-Group">
-                  <span class="projectType">Front-End Code</span>
-                  <span class="projectType">Motion Design</span>
-                  <span class="projectType">Web</span>
-                </div>
-              </div>
-            </a>
-          </article>
-
-          <!--Canada's Languages-->
-          <article>
-            <a class="projectSingle" href="canadaLanguages.html">
-              <img class="projectCover" src="./img/home-cover-Languages.jpg" loading="lazy" alt="Historia">
-              <div class="sec">
-                <h2 class="projectTitle">Canada's Languages <span class="projectArrow">→</span></h2>
-                <p class="projectDescription">A website exploring Canada's top non-official languages</p>
-                <div class="projectType-Group">
-                  <span class="projectType">Data Viz</span>
-                  <span class="projectType">Illustration</span>
                   <span class="projectType">Web</span>
                 </div>
               </div>
