--- a/about.html
+++ b/about.html
@@ -102,7 +102,8 @@
           tools. In my professional career, I have always experienced a strong pull towards working in the technology
           sector due to its capacity to spark positive global change on a grand scale. From past experiences, I have
           felt
-          most content tackling complex problem spaces collaboratively to extend human potential.
+          most content tackling complex problem spaces collaboratively to improve quality of life and simplify everyday
+          living.
         </p>
         <p class="bodyType marginParaSpace--bottom reveal">
           My expertise at the moment lies in zero-to-one projects involving a high degree of product thinking and visual
