--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 
             <div class="downButtonContainer">
               <a class="downButton hvr-forward" address="true">
-                Portfolio being updated!
-                <!-- <img class="emoji" src="./img/redTriangleDownEmoji.png" loading="lazy" alt="Down Button"> -->
+                Select projects
+                <img class="emoji" src="./img/redTriangleDownEmoji.png" loading="lazy" alt="Down Button">
               </a>
             </div>
           </div>
@@ -141,10 +141,11 @@
       <div class="container">
         <!-- Projects -->
         <section class="projects marginTopBottom">
+
           <!-- Facebook Internship -->
           <article>
             <a class="projectSingle locked" href="fbintern.html">
-              <img class="projectCover" src="./img/home-cover-FB.jpg" loading="lazy" alt="Historia">
+              <img class="projectCover" src="./img/home-cover-FB.jpg" loading="lazy" alt="FB cover">
               <div class="sec">
                 <h2 class="projectTitle">Facebook Internship <span class="projectArrow">→</span>
                   <!--<img class="emoji" src="img/lockEmoji.png" loading="lazy"
@@ -152,14 +153,28 @@
                 </h2>
                 <p class="projectDescription">Designing on the Monetization team to help creators acquire quality deals
                 </p>
-                <!-- <p class="awardText">
-        <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
-        Adobe Jam 1st Place
-      </p> -->
                 <div class="projectType-Group">
                   <span class="projectType">Product Design</span>
                   <span class="projectType">Internship</span>
                   <span class="projectType">Web</span>
+                </div>
+              </div>
+            </a>
+          </article>
+
+          <!-- Jiyu -->
+          <article>
+            <a class="projectSingle locked" href="jiyu.html">
+              <img class="projectCover" src="./img/jiyu/homeCover-Jiyu.jpg" loading="lazy" alt="Jiyu cover">
+              <div class="sec">
+                <h2 class="projectTitle">Jiyu <span class="projectArrow">→</span>
+                </h2>
+                <p class="projectDescription">Enabling expression for all with virtual fitting
+                </p>
+                <div class="projectType-Group">
+                  <span class="projectType">Product Design</span>
+                  <span class="projectType">Mobile</span>
+                  <span class="projectType">Thesis</span>
                 </div>
               </div>
             </a>
