--- a/jiyu.html
+++ b/jiyu.html
@@ -104,15 +104,19 @@
             <div class="caseStudyDetailsLeft">
               <h2 class="h2-caseStudy-DM">Background</h2>
               <p class="bodyType-DM marginS--bottom">
-                This 0-to-1 project was done for my undergraduate thesis, created from an iterative product design process involving real users.
+                This 0-to-1 project was done for my undergraduate thesis, created from an iterative product design
+                process involving real users.
 
-The Jiyu mobile app offers a new way to shop online through a virtual fitting room experience that uses a custom avatar of the shopper. It houses a suite of fun and simple tools to help shoppers determine the right fashion items and size for them, so they can express themselves fully and discover their unique style.
+                The Jiyu mobile app offers a new way to shop online through a virtual fitting room experience that uses
+                a custom avatar of the shopper. It houses a suite of fun and simple tools to help shoppers determine the
+                right fashion items and size for them, so they can express themselves fully and discover their unique
+                style.
 
-Peep the research book below for the full design process, test results and nuances behind my design decisions.
+                Peep the research book below for the full design process, test results and nuances behind my design
+                decisions.
               </p>
-              <a href="pdf/jiyu/Tu_Jasper_Research_Book.pdf" target="_blank"
-                class="button-DM">Research book</a>
-                <p class="marginL--top"><a href="#solution" class="button-DM">Jump to solution</a></p>
+              <a href="pdf/jiyu/Tu_Jasper_Research_Book.pdf" target="_blank" class="button-DM">Research book</a>
+              <p class="marginL--top"><a href="#solution" class="button-DM">Jump to solution</a></p>
             </div>
             <!-- Right side -->
             <div class="caseStudyDetailsRight">
@@ -121,7 +125,7 @@ Peep the research book below for the full design process, test results and nuanc
               <h3 class="h3-caseStudy-DM marginM--top">Duration</h3>
               <p class="bodyType-DM">January–May 2022</p>
               <h3 class="h3-caseStudy-DM marginM--top">Tools</h3>
-              <p class="bodyType-DM">Figma, Blender, After Effects, Premiere Pro, Keynote</p>
+              <p class="bodyType-DM">Figma, Blender, Illustrator, After Effects, Premiere Pro, Keynote</p>
             </div>
           </div>
         </div>
@@ -138,10 +142,12 @@ Peep the research book below for the full design process, test results and nuanc
               <h2 class="h2-caseStudy">Defining the people problem</h2>
             </div>
             <div class="caseStudyQuote marginS--top">
-              <b>Fitting rooms are the most critical point</b> in the shopper journey because it’s where a purchase decision is made; shoppers who use a fitting room are <b>7x</b> more likely to convert.
+              <b>Fitting rooms are the most critical point</b> in the shopper journey because it’s where a purchase
+              decision is made; shoppers who use a fitting room are <b>7x</b> more likely to convert.
             </div>
             <div class="caseStudyQuote marginS--top">
-              And yet, <b>only 1 in 10 shoppers are satisfied</b> with the current brick-and-mortar fitting room experience. Why is this so?
+              And yet, <b>only 1 in 10 shoppers are satisfied</b> with the current brick-and-mortar fitting room
+              experience. Why is this so?
             </div>
             <h3 class="h3-caseStudy marginS--top">Pain point 1</h3>
             <p class="bodyType">
@@ -164,7 +170,8 @@ Peep the research book below for the full design process, test results and nuanc
               Shoppers are limited to trying on items that belong to a specific store.
             </p>
             <div class="caseStudyQuote marginS--top">
-              Furthermore, online shopping doesn’t allow shoppers to experience an item physically, which leads many to <b>buy multiples to try</b>—then go through the pain of <b>returning those that don’t work</b>.
+              Furthermore, online shopping doesn’t allow shoppers to experience an item physically, which leads many to
+              <b>buy multiples to try</b>—then go through the pain of <b>returning those that don’t work</b>.
             </div>
           </div>
         </div>
@@ -179,10 +186,13 @@ Peep the research book below for the full design process, test results and nuanc
               <h2 class="h2-caseStudy">The 2nd dimension—a Gen Z expression problem</h2>
             </div>
             <div class="caseStudyQuote marginS--top">
-              Adjacent to discovering the need for an improved fitting room experience was the discovery that <b>73%</b> of Gen Z (born 1997–2012) desire <b>greater virtual self-expression to lead a happier, healthier life</b>.
+              Adjacent to discovering the need for an improved fitting room experience was the discovery that <b>73%</b>
+              of Gen Z (born 1997–2012) desire <b>greater virtual self-expression to lead a happier, healthier life</b>.
             </div>
             <p class="bodyType marginS--top">
-              This is relevant because these digital natives not only represent the present and future generation of shoppers, but reflect a growing ideal—the notion that identity extends beyond the physical because the online world is where friends are primarily met and personalities are expressed.
+              This is relevant because these digital natives not only represent the present and future generation of
+              shoppers, but reflect a growing ideal—the notion that identity extends beyond the physical because the
+              online world is where friends are primarily met and personalities are expressed.
             </p>
           </div>
         </div>
@@ -197,7 +207,8 @@ Peep the research book below for the full design process, test results and nuanc
             <div class="mediaCenterer">
               <p class="bodyType">Understanding the user frustrations, solutions were hypothesized around:
               <p class="caseStudyHMW">
-                How might we equip the shoppers of today & tomorrow with a fitting room experience that enhances creativity & makes it easier to arrive at a purchase decision?
+                How might we equip the shoppers of today & tomorrow with a fitting room experience that enhances
+                creativity & makes it easier to arrive at a purchase decision?
               </p>
             </div>
           </div>
@@ -215,7 +226,10 @@ Peep the research book below for the full design process, test results and nuanc
               <h2 class=" h2-caseStudy">User testing</h2>
             </div>
             <p class="bodyType">
-              Once I had mid-fidelity screens and user flows established, <span class="bodyTypeBold">concept testing</span> was conducted with 2 participants to get a pulse for the ideal visual directions to head in, and amplify understanding of technical constraints to make key design decisions on how the system would function if this were built IRL. Key insights:
+              Once I had mid-fidelity screens and user flows established, <span class="bodyTypeBold">concept
+                testing</span> was conducted with 2 participants to get a pulse for the ideal visual directions to head
+              in, and amplify understanding of technical constraints to make key design decisions on how the system
+              would function if this were built IRL. Key insights:
             </p>
           </div>
 
@@ -236,28 +250,36 @@ Peep the research book below for the full design process, test results and nuanc
           <!--User test images-->
           <div class="personaImg persona-1">
             <div class="bodyWrapper">
-            <p class="bodyType marginS2--bottom">
-              Conducting a body scan with phone camera to create an accurate avatar of the shopper was deemed unrealistic given current technological constraints. Thus, manual input of body measurements was used, with illustrations teaching the user how to measure their body.
-            </p>
-          </div>
-            <img class="caseStudyImg" src="./img/jiyu/conceptTest-avatarCreation.jpg" loading="lazy" alt="Concept test avatar creation">
+              <p class="bodyType marginS2--bottom">
+                Conducting a body scan with phone camera to create an accurate avatar of the shopper was deemed
+                unrealistic given current technological constraints. Thus, manual input of body measurements was used,
+                with illustrations teaching the user how to measure their body.
+              </p>
+            </div>
+            <img class="caseStudyImg" src="./img/jiyu/conceptTest-avatarCreation.jpg" loading="lazy"
+              alt="Concept test avatar creation">
           </div>
           <div class="personaImg persona-2 hide">
             <div class="bodyWrapper">
-            <p class="bodyType">
-              There was an overall preference for housing product info in a sticky and extendable bottom sheet to place visual focus on the product image. Progressive disclosure groups and prioritizes the most important info (brand, size + color selection, price, etc.), while giving access to other info and functions when sliding the bottom sheet up to extend it (style selection, reviews, etc.).
-            </p>
-          </div>
-            <img class="caseStudyImg" src="./img/jiyu/conceptTest-PDP.jpg" loading="lazy"
-              alt="Concept test PDP">
+              <p class="bodyType">
+                There was an overall preference for housing product info in a sticky and extendable bottom sheet to
+                place visual focus on the product image. Progressive disclosure groups and prioritizes the most
+                important info (brand, size + color selection, price, etc.), while giving access to other info and
+                functions when sliding the bottom sheet up to extend it (style selection, reviews, etc.).
+              </p>
+            </div>
+            <img class="caseStudyImg" src="./img/jiyu/conceptTest-PDP.jpg" loading="lazy" alt="Concept test PDP">
           </div>
           <div class="personaImg persona-3 hide">
             <div class="bodyWrapper">
               <p class="bodyType">
-                There was an overall preference for housing all controls together in one page so shoppers could easily adjust multiple settings in one instance, as shoppers can get quite specific in their search preferences.
+                There was an overall preference for housing all controls together in one page so shoppers could easily
+                adjust multiple settings in one instance, as shoppers can get quite specific in their search
+                preferences.
               </p>
             </div>
-            <img class="caseStudyImg" src="./img/jiyu/conceptTest-SearchFilter.jpg" loading="lazy" alt="Concept test search filter">
+            <img class="caseStudyImg" src="./img/jiyu/conceptTest-SearchFilter.jpg" loading="lazy"
+              alt="Concept test search filter">
           </div>
         </div>
       </div>
@@ -272,7 +294,13 @@ Peep the research book below for the full design process, test results and nuanc
               <h2 class=" h2-caseStudy">Forming an appropriate brand</h2>
             </div>
             <p class="bodyType">
-              The logo of Jiyu takes after the form of the sparkle. The sparkle is tied to positive sentiments, including love, happiness, beauty, gratitude, and excitement. This fits with Jiyu’s mission to be a vessel for personal expression and influence through fashion, where everyone is encouraged to feel comfortable and positive about trying new items and expressing who they are. To elevate brand presence, the logo is used as the central bottom nav button and pulls double duty with its resemblance to the “+” (connoting addition of items to the avatar). Sparkles are also used as subtle animations post-dressup, to communicate the outfit has been updated.
+              The logo of Jiyu takes after the form of the sparkle. The sparkle is tied to positive sentiments,
+              including love, happiness, beauty, gratitude, and excitement. This fits with Jiyu’s mission to be a vessel
+              for personal expression and influence through fashion, where everyone is encouraged to feel comfortable
+              and positive about trying new items and expressing who they are. To elevate brand presence, the logo is
+              used as the central bottom nav button and pulls double duty with its resemblance to the “+” (connoting
+              addition of items to the avatar). Sparkles are also used as subtle animations post-dressup, to communicate
+              the outfit has been updated.
             </p>
           </div>
         </div>
@@ -283,12 +311,10 @@ Peep the research book below for the full design process, test results and nuanc
         <div class="marginS--top">
           <div class="twoColumn">
             <div>
-              <img class="caseStudyImg" src="./img/jiyu/logo-ideation.jpg" loading="lazy"
-                alt="Brand image 1">
+              <img class="caseStudyImg" src="./img/jiyu/logo-ideation.jpg" loading="lazy" alt="Brand image 1">
             </div>
             <div>
-              <img class="caseStudyImg" src="./img/jiyu/logo-animation.jpg" loading="lazy"
-                alt="Brand image 2">
+              <img class="caseStudyImg" src="./img/jiyu/logo-animation.jpg" loading="lazy" alt="Brand image 2">
             </div>
           </div>
         </div>
@@ -304,7 +330,8 @@ Peep the research book below for the full design process, test results and nuanc
           </div>
           <div class="bodyWrapper">
             <p class="bodyType marginS2--bottom">
-              Jiyu is a mobile app that provides modular fitting of fashion items by creating an avatar of the shopper that's accurate to their body proportions. The video below walks through the core flows and functions:
+              Jiyu is a mobile app that provides modular fitting of fashion items by creating an avatar of the shopper
+              that's accurate to their body proportions. The video below walks through the core flows and functions:
             </p>
             <div class="caseStudyQuote marginS--bottom">
               Avatar creation
@@ -318,7 +345,12 @@ Peep the research book below for the full design process, test results and nuanc
               • Smart suggestions
               • Re-ordering of layers
             </div>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/709657913?h=483a210b48&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Jiyu App: All Flows"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+                src="https://player.vimeo.com/video/709657913?h=483a210b48&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Jiyu App: All Flows"></iframe>
+            </div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
           </div>
         </div>
       </div>
@@ -335,11 +367,20 @@ Peep the research book below for the full design process, test results and nuanc
             </div>
             <h3 class="h3-caseStudy marginS--top">Novelty is a game of remix</h3>
             <p class="bodyType">
-              I initially planned for an avatar creator concept with an integrated NFT marketplace but struggled to differentiate from competitors, as the creative tooling approach would either be too similar to products like Memoji or Maya. Hitting this dead-end ultimately prompted me to fuse the idea of an avatar creator with a virtual fitting room to define a new online shopping experience.
+              I initially planned for an avatar creator concept with an integrated NFT marketplace but struggled to
+              differentiate from competitors, as the creative tooling approach would either be too similar to products
+              like Memoji or Maya. Hitting this dead-end ultimately prompted me to fuse the idea of an avatar creator
+              with a virtual fitting room to define a new online shopping experience.
             </p>
             <h3 class="h3-caseStudy marginS--top">Business strategy, Web 3 & the creator class</h3>
             <p class="bodyType">
-              In thinking about translating Jiyu into a viable business model, I was encouraged to think about how other brands could benefit from the proliferation of a virtual fitting room and brand agnostic concept like Jiyu. As shown in the social Feed, Jiyu presents huge opportunities for brands to release limited edition or temporary NFT drops that shoppers can try with their avatar, where certain items or collections can be promoted depending on a brand’s business goals and what is popular among the people. Celebrities can further propagate and move the needle on certain looks, brands, and items when they post to the Feed and influence the masses.
+              In thinking about translating Jiyu into a viable business model, I was encouraged to think about how other
+              brands could benefit from the proliferation of a virtual fitting room and brand agnostic concept like
+              Jiyu. As shown in the social Feed, Jiyu presents huge opportunities for brands to release limited edition
+              or temporary NFT drops that shoppers can try with their avatar, where certain items or collections can be
+              promoted depending on a brand’s business goals and what is popular among the people. Celebrities can
+              further propagate and move the needle on certain looks, brands, and items when they post to the Feed and
+              influence the masses.
             </p>
           </div>
         </div>
